# ActorHub.ai

./: .env.example  .gitignore  CActorHub.ai-temp-openapi.json  DATA_INTEGRITY_AUDIT.md  Makefile  PLATFORM_GUIDE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_ROADMAP.md  README.md  START.md  SYSTEM_DOCUMENTATION.md  SYSTEM_STATUS.md  SYSTEM_STATUS_HE.md  TODO.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  package.json  restart-api.bat  restart-tunnel.bat  start-api.bat  start-dev.bat  start-docker.bat  start-platform.bat  start-web.bat  start-worker.bat  stop-all.bat  stop-platform.bat  test_login.json  turbo.json  רותם סלע.htm  ● הוראות הפעלה מחדש של הפלטפורמה.txt  🚀 הפעלת הפלטפורמה מהטרמינל.txt
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  .env.production.example  .env.production.template  .env.test  API_CHANGELOG.md  API_DOCUMENTATION.md  Dockerfile  pytest.ini  requirements-dev.txt  requirements.txt  test_register.json  test_routes.py
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/migrations/: data_integrity_fixes.sql
apps/api/scripts/: fix_and_add_actors.py  fix_images.py  fix_qdrant_embedding.py  seed.py  seed_israeli_actors.py  setup_insightface.py  setup_replicate.py
apps/api/tests/: __init__.py  conftest.py  test_admin.py  test_api_integration.py  test_api_keys.py  test_auth.py  test_health.py  test_identity.py  test_marketplace.py  test_notifications.py  test_services.py  test_subscriptions.py  test_training_service.py
apps/studio/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/web/: .env.example  .env.production.example  .env.production.template  Dockerfile  lighthouserc.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.a11y.config.ts  vitest.config.ts
apps/web/e2e/: accessibility.spec.ts  admin.spec.ts  auth.spec.ts  cart-checkout.spec.ts  demo-modal.spec.ts  forms.spec.ts  navigation.spec.ts  page-load.spec.ts
apps/web/src/: middleware.ts
apps/web/tests/: setup.ts
apps/worker/: Dockerfile  celery_app.py  config.py  db.py  metrics.py  requirements.txt  tracing.py
apps/worker/tasks/: __init__.py  cleanup.py  (+4 more)
backups/: redis_backup_20251217_170537.rdb  redis_backup_20251217_170630.rdb
infrastructure/monitoring/: alertmanager.yml  alerts.yml  loki-config.yaml  prometheus.yml  promtail-config.yaml
infrastructure/terraform/: main.tf  variables.tf
nginx/: nginx.conf
scripts/: seed_profiles.py
scripts/backup/: backup.py  restore.py
scripts/setup/: init-db.sql  setup.ps1  setup.sh
scripts/stability/: run_all.py
services/delivery/: Dockerfile  pyproject.toml
services/delivery/src/: __init__.py  config.py  main.py  routes.py
services/identity/: Dockerfile  pyproject.toml
services/identity/src/: __init__.py  config.py  main.py  middleware.py  routes.py
services/licensing/: Dockerfile  pyproject.toml
services/licensing/src/: __init__.py  config.py  main.py  routes.py
services/training/: Dockerfile  pyproject.toml
services/training/src/: __init__.py  config.py  main.py  routes.py  tasks.py
tests/integration/: test_auth.py  test_database.py  test_end_to_end.py  test_face_recognition.py  test_identity.py  test_qdrant.py
tests/load/: locustfile.py  report.html
tests/security/: security_audit.py
(+200 files in other folders)
